# ChipIsCloud

./: Cargo.toml
.github/workflows/: rust.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
embedded/: Cargo.toml  build.rs
embedded/.cargo/: config.toml
embedded/src/: init.rs  main.rs  static_site_app.rs
embedded/src/utilities/: mod.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  main.rs
