[package]
name = "embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32h563zi", "memory-x", "time-driver-any", "exti", "unstable-pac", "low-power"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.6.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
static_cell = "2"
emballoc = "0.3.0"
picoserve = { version = "0.15.1", features = ["defmt", "embassy"] }

[build-dependencies]
flate2 = "1.1.1"
